tests/snapshots/run_wpt_conformance__onnx_triangular_float16_5D_tensor_default_options.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "triangular.https.any.js",
    "triangular float16 5D tensor default options",
    "onnx",
    "PASS",
)
